...
  }, [navState]);

  return (
    <SafeAreaView>
      <ScrollView
        style={{marginBottom: '5%'}}
        testID="session-details-scroll-view"
        ref={(scrollView) => (this.scrollView = scrollView)}>
        <Card style={{padding: '5%', margin: '2%'}} elevation={2}>
          <Card.Title title="Type of Session" />
          {Platform.OS === 'ios' && (
            <Subheading>
              {sessionType === 'surf-club' ? 'Surf Club' : 'Surf Therapy'}
...
